CHANGELOG

Nutils is being actively developed and the API is continuously evolving.
The following overview lists user facing changes as well as newly added
features in inverse chronological order.


IMPROVED: more efficient trimming

The trim routine (which is used for the Finite Cell Method) is rewritten for
speed and to produce more efficient quadrature schemes. The changes relate to
the subdivision at the deepest refinement level. While this step used to
introduce auxiliary vertices at every dimension (lines, faces, volumes), the
new implementation limits the introduction of vertices to the line segments
only, resulting in a subdivision that consists of fewer simplices and
consequently fewer quadrature points.


REMOVED: Nutils configuration file

Support for the Nutils configuration file (which used to be located in either
~/.nutilsrc or ~/.config/nutils/config) has been removed. Instead, the
following environment variables can be set to override the default Nutils
settings:

  - NUTILS_PDB  = yes|no
  - NUTILS_GRACEFULEXIT = yes|no
  - NUTILS_OUTROOTDIR = path/to/html/logs
  - NUTILS_OUTROOTURI = uri/to/html/logs
  - NUTILS_SCRIPTNAME = myapp
  - NUTILS_OUTDIR = path/to/this/html/log
  - NUTILS_OUTURI = uti/to/this/html/log
  - NUTILS_RICHOUTPUT = yes|no
  - NUTILS_VERBOSE = 1|2|3|4
  - NUTILS_MATRIX = numpy|scipy|mkl|auto
  - NUTILS_NPROCS = 1|2|...
  - NUTILS_CACHE = yes|no
  - NUTILS_CACHEDIR = path/to/cache


DEPRECATED: function methods that have Numpy equivalents

The `nutils.function` methods that have direct equivalents in the `numpy`
module (`function.sum`, `function.sqrt`, `function.sin`, etc) have been
deprecated in favour of using Numpy's methods (`numpy.sum`, `numpy.sqrt`,
`numpy.sin`, etc) and will be removed in the next release. Ultimately, only
methods that relate to the variable nature of function arrays and therefore
have no Numpy equivalent, such as `function.grad` and `function.normal`, will
remain in the function module.
