@@ -1,0 +1,15 @@
+[project]
+name = "nutils"
+version = "8.0a0"
+dependencies = ["numpy>=1.17", "treelog>=1.0b5", "stringly", "appdirs~=1.0", "bottombar~=2.0.2", "psutil~=5.0"]
+
+[project.optional-dependencies]
+docs = ["Sphinx>=1.8"]
+matrix_scipy = ["scipy>=0.13"]
+matrix_mkl = ["mkl"]
+export_mpl = ["matplotlib>=1.3", "pillow>2.6"]
+import_gmsh = ["meshio"]
+
+[build-system]
+requires = ["maturin>=0.12,<0.13"]
+build-backend = "maturin"
